--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,17 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
+    <% if user_signed_in? %>
+      <p>Welcome, <%= current_user.username %>!</p>
+      <%= link_to 'Edit Profile', edit_user_registration_path %> |
+      <%= button_to 'Logout', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure?' }  %>
+    <% else %>
+      <%= link_to 'Sign Up', new_user_registration_path %> |
+      <%= link_to 'Login', new_user_session_path %>
+    <% end %>
     <%= yield :head %>
 
     <link rel="manifest" href="/manifest.json">
